--- a/config.json
+++ b/config.json
@@ -1,6 +1,13 @@
 {
-    "title":"Blog Title",
-    "subTitle":"Blog description",
-    "avatarUrl":"https://github.githubassets.com/favicons/favicon.svg",
-    "GMEEK_VERSION":"last"
+  "title": "Zhennorm's Blog",
+  "subTitle": "Original post: zhennorm.github.io",
+  "avatarUrl": "https://cdn.jsdelivr.net/gh/drfolksci/image-host@main/头像.png",
+  "bottomText": "❤️Please cite the source when reposting❤️",
+  "needComment": true,
+  "onePageListNum":15,
+  "startSite":"08/03/2025",
+  "i18n":"EN",
+  "allHead": "<script src='https://blog.meekdai.com/Gmeek/plugins/GmeekVercount.js'></script>",
+  "script": "<script src='https://blog.meekdai.com/Gmeek/plugins/articletoc.js'></script><script src='https://blog.meekdai.com/Gmeek/plugins/lightbox.js'></script>",
+  "GMEEK_VERSION": "last"
 }
